# how-auth-even-works

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
services/backend/: pyproject.toml
services/backend/src/backend/: __main__.py
