[project]
name = "how-auth-even-works"
version = "0.1.0"
description = "A learning project to understand how authentication works in web applications."
readme = "README.md"
authors = [{ name = "thibault", email = "thibault@thvi.ch" }]
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "services/*",
    "lib/*",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Select essential rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[dependency-groups]
dev = [
    "pyrefly>=0.17.1",
    "ruff>=0.11.12",
]
